@startuml
'https://plantuml.com/class-diagram

entity Surah {
    * number: int
    * arabicName: string
    * latinName: string
    * ayahCount: int
    * revelationType: RevelationType
    * meaning: string
    * description: string
    * audioUrl: string
}

entity Ayah {
    * id: int
    * surahNumber: int,
    * number: int,
    * arabicText: string,
    * latinText: string,
    * bahasaTranslate: string
}

Enum RevelationType {
MECCAN
MEDINAN
}

RevelationType ||--|{ Surah
Surah ||--|{ Ayah

@enduml